# stria

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
.horizon/: digest_cache.json  mtime_cache.json  phrases.sqlite
scripts/: check.sh
src/: lcep.rs  main.rs  setup.rs  structural_risk.rs  zone.rs
src/index/: extract.rs  mod.rs  schema.rs
src/search/: bm25.rs  mod.rs  proximity.rs
tests/: docker_integration.py  mcp_integration.py
tests/fixtures/: build_test_db.py  test_phrases.sqlite
