[package]
name = "event-horizon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fxhash = "0.2.1"
rayon = "1.12.0"
regex = "1.12.3"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.6"
