[package]
name = "stria"
version = "0.1.1"
edition = "2021"
description = "Grammar-free structural codebase indexer and MCP server"
license = "MIT"
repository = "https://github.com/Reliary/stria"
homepage = "https://github.com/Reliary/stria"
keywords = ["mcp", "code-intelligence", "structural-analysis", "grammar-free", "codebase-indexing"]
categories = ["development-tools", "command-line-utilities"]

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rustc-hash = "2.1"
mimalloc = "0.1"
rayon = "1.12.0"
regex = "1.12.3"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.6"
walkdir = "2.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
